--- a/public/css/fileround.css
+++ b/public/css/fileround.css
@@ -86,12 +86,12 @@ body,html{
 
 #filetree-container {
     display:table-row;
-    height:100%;
+    height:90%%;
 }
 
 #filetree-container-scroll {
     position: relative;
-    height: 100%;
+    height: 90%;
 }
 #filetree {
     position: absolute;
