--- a/public/css/fileround.css
+++ b/public/css/fileround.css
@@ -28,12 +28,17 @@ body,html{
 
 #docs{
   width: 85%;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
-#docs:focus, #round .tab-pane:focus {
+.doc:focus, #round .tab-pane:focus {
   outline: 0px solid transparent;
+}
+
+.doc{
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 
@@ -86,12 +91,12 @@ body,html{
 
 #filetree-container {
     display:table-row;
-    height:90%%;
+    height:100%%;
 }
 
 #filetree-container-scroll {
     position: relative;
-    height: 90%;
+    height: 88%;
 }
 #filetree {
     position: absolute;
