--- a/public/debatestyle.css
+++ b/public/debatestyle.css
@@ -356,7 +356,9 @@ h1{
 	font-size: 50px;
 	font-weight: bold;
 	vertical-align: middle;
-	qbackground-color: #97C2EE;
+	background-color: transparent;
+	text-shadow: 1px 1px 2px black, 0 0 1em white, 0 0 0.2em white;
+ 
 }
 
 
