--- a/public/debatestyle.css
+++ b/public/debatestyle.css
@@ -76,9 +76,9 @@ u {
   font-size: 6pt;
 
 }
-.size-mode-1 b, .size-mode-1 u {
+.size-mode-1 b, .size-mode-1 u,  .size-mode-1 *[style*=background-color] {
   font-size: 12pt;
-  line-height: 12pt;
+  line-height: 14pt;
 
 
 }
@@ -222,13 +222,14 @@ u {
 
 #filetree .heading-h1 {
   padding-left: 5px;
+  font-weight: 400;
 }
 #filetree .heading-h2 {
-  padding-left: 10px;
+  padding-left: 15px;
   font-size: 90%;
 }
 #filetree .heading-h3 {
-  padding-left: 15px;
+  padding-left: 25px;
   font-size: 75%;
   color: #444;
 }
