--- a/public/debatestyle.css
+++ b/public/debatestyle.css
@@ -1,5 +1,17 @@
 /* PANELS */
 
+html {
+    padding-bottom: 1000px;
+}
+
+body {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
 
 .flow{
 	width: 98%;
@@ -98,14 +110,14 @@ iframe[src^="https://apis.google.com"] {
 }
 
 body, html {
-  height: 100%;
-  width: 100%;
+  #height: 100%;
+  #width: 100%;
   margin: 0;
   padding: 0;
   font-size: 14px;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
+  #overflow: hidden;
 	font-family: 'Open Sans', sans-serif;
   font-family: 'Verdana', sans-serif;
 	_font-family: 'Lato', sans-serif;
@@ -137,7 +149,8 @@ body, html {
 }
 #sidebar{
   flex: 1;
-  max-width: 15%;
+	max-width: 301px;
+	width: 301px;
 }
 #docs{
   flex: 2;
