--- a/public/css/uiSkylight.css
+++ b/public/css/uiSkylight.css
@@ -38,7 +38,7 @@ button:active {
 }
 /*toggle button*/
 button.active{
-    background: #4285F5;
+    background-color: #4285F5;
     color: #fff;
 }
 /*remove spacing between buttons*/
@@ -60,25 +60,22 @@ button+*:not(button){
 }
 
 .dropdown-menu{ /*showing*/
-  height: 500px;
   width: 150px;
+  height: 500px;
   position: absolute;
   left:0;
   z-index: 1000;
   top: 160%;
-  transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
   opacity: 1;
 }
 
 .dropdown:not(:hover) .dropdown-menu{ /* hidden*/
 
-  top: 0px !important;
+  top: -300px;
   height: 0px;
-  width: 0px !important;
+  width: 0px;
   opacity: 0;
-
   transform: translate(0%, -100%);
-  transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 }
 
 .dropdown-menu button{
