--- a/public/css/filetree.css
+++ b/public/css/filetree.css
@@ -1,6 +1,24 @@
+
+/*fisheye*/
+/*li:hover{
+  zoom: 2;
+  width: 300px;
+}
+li:hover+li{zoom: 1.7;
+width: 300px;}
+li:hover+li+li{zoom: 1.3;
+width: 300px;}
+li:hover+li+li+li{zoom: 1.1;
+width: 300px;}*/
+/*li{transition: all .2s ease-in-out;}*/
+
+
+
+
+
+
 aside ul{
   list-style-type: none;
-  padding:0;
 
 }
 
@@ -20,83 +38,85 @@ aside ul{
 
 #filetree {
   flex: 2;
-  overflow: auto;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
 
 /*collapse / expand icons and cursor*/
-aside ul{
+#filetree ul{
   padding:0;
   padding-top: 2px;
   margin:0;
 }
-aside ul > label {
+ul > label {
   white-space: nowrap;
   display: block;
   width: 100%;
-  cursor: url(/img/minimize.ico) 0 0, nw-resize !important;
+  cursor: url(/minimize.ico) 0 0, nw-resize !important;
   padding: 0px 1px;
   font-weight: bold;
   _border-top: 1px solid  rgb(170, 207, 231);;
 }
-aside ul > label::before{
+ul > label::before{
   content: "\e80a";
   padding-right: 3px;
   font-family: "debatesynergy-icons";
 }
 
-aside ul.collapsed > label {
-  cursor: url(/img/expand.ico) 0 0, nw-resize !important;
+ul.collapsed > label {
+  cursor: url(/expand.ico) 0 0, nw-resize !important;
 }
-
-ul.collapsed > label::before{
+ ul.collapsed > label::before{
   content: "\e80d";
 }
 
 
 /*file name on hover effect*/
 
-ul>li:hover, ul.collapsed:hover>label{
-    box-shadow: inset 0 0 0 40px rgba(170, 207, 231, 0.6);
+#filetree ul>li:hover, #filetree ul.collapsed:hover>label{
+
+     box-shadow: inset 0 0 0 40px rgba(170, 207, 231, 0.6);
 }
 
 
-ul:not(.collapsed)>label:hover{
-    box-shadow: inset 0 0 0 40px rgba(193,46,42,.5);
+#filetree ul:not(.collapsed)>label:hover{
+box-shadow: inset 0 0 0 40px rgba(193,46,42,.5);
 }
 
 
 
 
-aside ul > li {
+#filetree ul > li {
   _padding-left: 20px;
 }
 
-aside li {
+#filetree li {
   display: block;
   position: relative;
   margin: 0px;
-  padding: 0;
+
   font-size: 11pt;
   line-height: 100%;
   __cursor: row-resize;
 }
 
 
-.selected{
+
+#filetree .selected{
   background-color: rgb(170, 207, 231);
 }
 /*:not(:hover)*/
-.collapsed > li {
+
+#filetree .collapsed > li {
   display: none;
 }
 
-ul.opened{
+#filetree ul.opened{
   background-color: #EBF6FC;
 }
 
-ul.opened>label{
+#filetree ul.opened>label{
   background-color: rgb(170, 207, 231);
 }
 
