--- a/public/css/filetree.css
+++ b/public/css/filetree.css
@@ -103,7 +103,7 @@ box-shadow: inset 0 0 0 40px rgba(193,46,42,.5);
 
 
 
-#filetree .selected{
+#filetree li.selected{
   background-color: rgb(170, 207, 231);
 }
 /*:not(:hover)*/
