--- a/public/css/roundpanel.css
+++ b/public/css/roundpanel.css
@@ -76,7 +76,7 @@
 
 
 #sidebyside {
-  background-image: url('icon/sidebyside.png');
+  background-image: url('/css/icon/sidebyside.png');
   /*width: 40px;*/
   height: 34px;
   background-repeat: no-repeat;
